styles.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
* {
    padding: 0;
    margin: 0;
    max-width: 100%;
    overflow: hidden;
    margin: 0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    font-family: "Open Sans", sans-serif;
    color: white;
}

html {
    font-size: 10px;
}

header {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    background-color: #000000;
    height: 65px;
}

.logo-and-search-wrapper {
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
}


/* Logo */

.logo {
    margin-left: 30px;
    margin-right: 30px;
    min-width: 200px;
    -ms-flex-negative: 0;
    flex-shrink: 0;
}


/* Search bar and categories dropdown */

.search-wrapper {
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    width: 600px;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    -ms-flex-negative: 2;
    flex-shrink: 2;
    margin-right: 10px;
    justify-content: space-between;
}

.search {
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    border: none;
    border-radius: 5px;
}

.search__search-bar {
    width: 320px;
    height: 40px;
    border: none;
    outline: none;
    padding: 0;
    padding-left: 20px;
    -ms-flex-negative: 3;
    flex-shrink: 3;
}

.search__search-bar::-webkit-input-placeholder {
    color: #515151;
    opacity: 0.7;
    font-size: 16px;
}

.search__search-bar::-moz-placeholder {
    color: #515151;
    opacity: 0.7;
    font-size: 16px;
}

.search__search-bar:-ms-input-placeholder {
    color: #515151;
    opacity: 0.7;
    font-size: 16px;
}

.search__search-bar::-ms-input-placeholder {
    color: #515151;
    opacity: 0.7;
    font-size: 16px;
}

.search__search-bar::placeholder {
    color: #515151;
    opacity: 0.7;
    font-size: 16px;
}

.search__search-bar:focus {
    color: #515151;
    font-size: 16px;
}

.search__search-btn {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    width: 108px;
    height: 40px;
    padding: 0 10px;
    border: none;
    background-color: #ff0022;
    font-size: 16px;
    cursor: pointer;
}

.search__search-btn__icon {
    min-width: 22px;
}

.categories-dropdown {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    height: 40px;
    border: none;
    background-color: #000000;
    font-size: 13px;
    cursor: pointer;
}

.categories-dropdown__icon {
    min-width: 14px;
    margin-left: 10px;
}


/* Sell button and account menu dropdown */

.dropdown-menu-wrapper {
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -ms-flex-negative: 0;
    flex-shrink: 0;
}

.dropdown-menu-wrapper__search-btn {
    display: none;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    width: 40px;
    height: 40px;
    border: none;
    border-radius: 5px;
    background-color: #ff0022;
    font-size: 16px;
    cursor: pointer;
    -ms-flex-negative: 1;
    flex-shrink: 1;
}

.dropdown-menu-wrapper__search-btn__icon {
    min-width: 22px;
}

.sell__icon {
    min-width: 25px;
}

.sell {
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    width: 120px;
    height: 40px;
    margin-right: 20px;
    border-color: #00a3e9;
    background-color: #000000;
    font-size: 13px;
    cursor: pointer;
    border: 2px solid #00a3e9;
    border-radius: 5px;
}


/* Dropdown */

.account-dropdown {
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    width: 100px;
    height: 65px;
    background-color: #2e2e2e;
    font-size: 13px;
    border: 0;
    cursor: pointer;
}

.account-dropdown__content {
    min-width: 240px;
    background-color: #2e2e2e;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    display: none;
    position: absolute;
    list-style: none;
    padding-left: 30px;
    z-index: 1;
    top: 65px;
    right: 0;
    cursor: default;
}

.account-dropdown:hover .account-dropdown__content {
    /* Display the dropdown on hover*/
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

#Sell-button-menu {
    display: none;
    width: 170px;
    padding: 0 30px;
    background-color: #2e2e2e;
}

.account-dropdown__content__item {
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    height: 20px;
    margin-top: 20px;
    font-size: 15px;
    padding-left: 30px;
    cursor: pointer;
}

#Log-out {
    -ms-flex-item-align: center;
    -ms-grid-row-align: center;
    align-self: center;
    padding-left: 0;
    margin-top: 15px;
    margin-bottom: 15px;
}


/* Dropdown decoration line */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    opacity: 0.3;
    margin-top: 20px;
    margin-right: 30px;
    padding: 0;
}


/* Dropdown icons */

.account-dropdown__content__item::before {
    content: "";
    display: block;
    padding-right: 30px;
    position: absolute;
    right: 160px;
}

#My-account::before {
    background: url("./assets/My-account-icon.svg") no-repeat;
    width: 17px;
    height: 17px;
}

#Purchase-history::before {
    background: url("./assets/Purchase-history-icon.svg") no-repeat;
    width: 21px;
    height: 17px;
}

#My-offers::before {
    background: url("./assets/My-offers-icon.svg") no-repeat;
    width: 21px;
    height: 18px;
}

#Comments::before {
    background: url("./assets/Comments-icon.svg") no-repeat;
    width: 22px;
    height: 17px;
}

#Account-management::before {
    background: url("./assets/Account-management-icon.svg") no-repeat;
    width: 18px;
    height: 19px;
    right: 162px;
}

#Log-out::before {
    background: url("./assets/Log-out-icon.svg") no-repeat;
    width: 18px;
    height: 18px;
    right: 115px;
}


/* Notifications */

#Comments::after {
    display: block;
    position: absolute;
    width: 25px;
    height: 25px;
    margin-left: 90px;
    content: "16";
    border-radius: 60px;
    background-color: #03adfd;
    text-align: center;
    font-size: 14px;
    line-height: 25px;
}


/* Hover effects */

.search__search-btn:hover {
    background-color: #d30e29;
}

.dropdown-menu-wrapper__search-btn:hover {
    background-color: #d30e29;
}

.sell:hover,
.account-dropdown__content__item:hover {
    color: #00a3e9;
}

#Comments:after:hover {
    color: red;
}


/* Media queries */

@media only screen and (max-width: 1114px) {
    .categories-dropdown {
        width: 100px;
        -ms-flex-negative: 0;
        flex-shrink: 0;
    }
    .search-wrapper {
        margin-right: 30px;
    }
}

@media only screen and (max-width: 930px) {
    .logo {
        -ms-flex-negative: 1;
        flex-shrink: 1;
    }
    .categories-dropdown {
        display: none;
    }
    .search__search-btn p {
        display: none;
    }
    .search__search-btn {
        max-width: 70px;
    }
}

@media only screen and (max-width: 780px) {
    header {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-align: center;
        -ms-flex-align: center;
        align-items: center;
        -webkit-box-pack: justify;
        -ms-flex-pack: justify;
        justify-content: space-between;
        background-color: #000000;
        height: 60px;
    }
    .logo {
        min-width: 134px;
    }
    #Sell-button {
        display: none;
    }
    .account-dropdown {
        display: -webkit-inline-box;
        display: -ms-inline-flexbox;
        display: inline-flex;
        -webkit-box-align: center;
        -ms-flex-align: center;
        align-items: center;
        -ms-flex-pack: distribute;
        justify-content: space-around;
        width: 80px;
        height: 65px;
        background-color: #000000;
        font-size: 13px;
        border: 0;
        cursor: pointer;
    }
    .account-dropdown__btn__avatar-icon {
        width: 40px;
    }
    .account-dropdown__btn__icon {
        display: none;
    }
    .account-dropdown__content {
        min-width: 270px;
        padding-top: 10px;
        top: 0;
        min-height: 100%;
        -webkit-box-shadow: -3px 8px 24px -7px #000000;
        box-shadow: -3px 8px 24px -7px #000000;
    }
    .account-dropdown:hover .account-dropdown__content {
        /* Display the dropdown on hover*/
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
    }
    .dark-filter {
        /* Display dark filter on hover */
        display: absolute;
        position: fixed;
        z-index: 1;
        background-color: rgba(23, 23, 23, 0.5);
        top: 0;
        left: 0;
        height: 100vh;
        width: calc(100vw - 270px);
    }
    #Sell-button-menu {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
    }
    #Sell-button-menu::after {
        content: "";
        background: url("./assets/Cancel-icon.svg") no-repeat;
        width: 22px;
        height: 22px;
        display: block;
        position: absolute;
        right: 20px;
    }
    .account-dropdown__content__item {
        display: -webkit-inline-box;
        display: -ms-inline-flexbox;
        display: inline-flex;
        height: 20px;
        margin-top: 30px;
        font-size: 15px;
        padding-left: 30px;
    }
    .account-dropdown__content__item::before {
        padding-right: 60px;
    }
    hr {
        margin-right: 65px;
    }
    #Log-out {
        -ms-flex-item-align: start;
        align-self: flex-start;
        margin-left: 70px;
        margin-top: 25px;
    }
    #Log-out::before {
        margin-right: 5px;
    }
}

@media only screen and (max-width: 575px) {
    .dropdown-menu-wrapper {
        height: 60px;
    }
    .account-dropdown {
        height: 60px;
        -webkit-box-pack: start;
        -ms-flex-pack: start;
        justify-content: flex-start;
        width: 55px;
    }
    .search {
        display: none;
    }
    .dropdown-menu-wrapper__search-btn {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        margin-right: 10px;
    }
    .search-wrapper {
        justify-self: flex-start;
    }
}

